--- a/package.json
+++ b/package.json
@@ -17,11 +17,6 @@
   "author": "GitHub",
   "license": "CC0-1.0",
   "devDependencies": {
-    "electron": "~1.8.2",
-    "node-gyp": "^3.6.2",
-    "sqlite3": "^3.1.13"
-  },
-  "dependencies": {
-    "xls-to-json": "^0.4.0"
+    "electron": "~1.8.2"
   }
 }
